1.9.10 - 2018-XX-XX

  1. Use Hadoop `CredentialProvider` API to retrieve proxy credentials.


1.9.9 - 2018-10-19

  1. Add an option for running flat and regular glob search algorithms in
     parallel:

       fs.gs.glob.concurrent.enable (default: true)

     Returns a result of an algorithm that finishes first and cancels the other
     algorithm.

  2. Add an option to provide path for configuration override file:

       fs.gs.config.override.file (default: null)

     Connector overrides its configuration with values provided in this file.
     This file should be in XML format that follows the same schema as Hadoop
     configuration files.

1.9.8 - 2018-10-03

  1. Expose `FileChecksum` in `GoogleHadoopFileSystem` via property:

      fs.gs.checksum.type (default: NONE)

     Valid property values: `NONE`, `CRC32C`, `MD5`.

     CRC32c checksum is compatible with HDFS-13056.

  2. Add support for proxy authentication for both `APACHE` and `JAVA_NET`
     `HttpTransport` options.

     Proxy authentication is configurable with properties:

       fs.gs.proxy.username (default: null)
       fs.gs.proxy.password (default: null)

  3. Update Apache HttpClient to the latest version.


1.9.7 - 2018-09-20

  1. Add an option to provide credentials directly in Hadoop Configuration,
     without having to place a file on every node, or associating service
     accounts with GCE VMs.

       fs.gs.auth.service.account.private.key.id
       fs.gs.auth.service.account.private.key

  2. Add an option to specify max bytes rewritten per rewrite request when
     `fs.gs.copy.with.rewrite.enable` is set to `true`:

       fs.gs.rewrite.max.bytes.per.call (default: 536870912)

     Even though GCS does not require this parameter for rewrite requests,
     rewrite requests are flaky without it.


1.9.6 - 2018-08-30

  1. Change default values for GCS batch/directory operations properties to
     improve performance:
